--- a/package.json
+++ b/package.json
@@ -4,9 +4,80 @@
   "description": "Simple headless commerce/oms",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "npm run build",
+    "build": "tsc",
+    "dev": "concurrently -k \"tsc -w\" \"nodemon --on-change-only dist/server.js\"",
+    "start": "npx pm2-runtime start pm2.yaml",
+    "test": "jest --coverage --verbose --passWithNoTests"
   },
-  "keywords": ["Commerce","OMS"],
+  "keywords": [
+    "Commerce",
+    "OMS"
+  ],
   "author": "Mahasak Pijittum",
-  "license": "ISC"
+  "license": "ISC",
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist/"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.7",
+    "@types/csurf": "^1.9.36",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.7",
+    "@types/express-rate-limit": "^5.0.0",
+    "@types/express-winston": "^4.0.0",
+    "@types/got": "^9.6.11",
+    "@types/helmet": "0.0.47",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.0.27",
+    "@types/winston": "^2.4.4",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^5.1.3",
+    "express-winston": "^4.0.5",
+    "got": "^11.5.2",
+    "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "pm2": "^4.4.0",
+    "ts-node": "^8.10.2",
+    "tsc-watch": "^4.2.9",
+    "typescript": "^3.9.7",
+    "winston": "^3.3.3",
+    "winston-transport-sentry-node": "^0.6.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.9",
+    "concurrently": "^5.3.0",
+    "jest": "^26.3.0",
+    "nodemon": "^2.0.4",
+    "ts-jest": "^26.1.4"
+  },
+  "engines": {
+    "node": ">=12.0.0",
+    "npm": ">=6.0.0"
+  }
 }
