--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/helmet": "0.0.47",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.27",
+    "@types/redis": "^2.8.25",
     "@types/winston": "^2.4.4",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -63,6 +64,7 @@
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "pm2": "^4.4.0",
+    "redis": "^3.0.2",
     "ts-node": "^8.10.2",
     "tsc-watch": "^4.2.9",
     "typescript": "^3.9.7",
