--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run build",
-    "build": "tsc",
-    "dev": "concurrently -k \"tsc -w\" \"nodemon --on-change-only dist/server.js\"",
-    "start": "npx pm2-runtime start pm2.yaml",
+    "build": "tsc --build tsconfig.json",
+    "dev": "tsnd --project tsconfig.json src/server.ts",
+    "start-pm2": "npx pm2-runtime start pm2.yaml",
+    "start": "cross-env NODE_ENV=production REACT_SSR_ENV=production node dist/server.js",
     "test": "jest --coverage --verbose --passWithNoTests"
   },
   "keywords": [
@@ -35,6 +36,8 @@
     ]
   },
   "dependencies": {
+    "@react-ssr/core": "^0.24.0",
+    "@react-ssr/express": "^0.24.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
@@ -48,22 +51,29 @@
     "@types/helmet": "0.0.47",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.27",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
     "@types/redis": "^2.8.25",
     "@types/winston": "^2.4.4",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "crossenv": "0.0.2-security",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.1.3",
+    "express-react-views": "^0.11.0",
     "express-winston": "^4.0.5",
     "got": "^11.5.2",
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "pm2": "^4.4.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "redis": "^3.0.2",
     "ts-node": "^8.10.2",
     "tsc-watch": "^4.2.9",
@@ -76,7 +86,8 @@
     "concurrently": "^5.3.0",
     "jest": "^26.3.0",
     "nodemon": "^2.0.4",
-    "ts-jest": "^26.1.4"
+    "ts-jest": "^26.1.4",
+    "ts-node-dev": "^1.0.0-pre.56"
   },
   "engines": {
     "node": ">=12.0.0",
