--- a/pm2.yaml
+++ b/pm2.yaml
@@ -2,3 +2,7 @@ apps:
   - script: ./dist/server.js
     instances: max
     exec_mode: cluster
+    env    :
+      NODE_ENV: development
+    env_production:
+      NODE_ENV: production
